API /dashboard for monitor Wireguard

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,26 @@
             margin: 0 auto;
             padding: 20px;
         }
+        .navbar {
+            padding: 15px 20px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .navbar h1 {
+            margin: 0;
+        }
+        .nav-buttons {
+            display: flex;
+            gap: 10px;
+        }
+        .nav-btn {
+            text-decoration: none;
+            padding: 8px 15px;
+            border-radius: 3px;
+        }
         .key-status-banner {
             padding: 15px;
             margin: 20px 0;
@@ -137,7 +157,6 @@
             <a href="/dashboard" class="nav-btn">Monitor</a>
         </div>
     </div>
-    <h1>WireGuard VPN Manager</h1>
     <div id="key-status-banner" class="key-status-banner"></div>
     
     <hr>
