--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -2,20 +2,140 @@
 <html>
 <head>
     <title>WireGuard Dashboard</title>
-    <script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 1400px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .navbar {
+            padding: 15px 20px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .navbar h1 {
+            margin: 0;
+        }
+        .nav-buttons {
+            display: flex;
+            gap: 10px;
+        }
+        .nav-btn {
+            text-decoration: none;
+            padding: 8px 15px;
+            border-radius: 3px;
+        }
+        .interface-overview {
+            padding: 20px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+        .interface-overview h2 {
+            margin-top: 0;
+        }
+        .interface-info-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 15px;
+            margin-top: 15px;
+        }
+        .info-item {
+            padding: 10px;
+            border-radius: 3px;
+            border: 1px solid #000;
+        }
+        .info-item strong {
+            display: block;
+            margin-bottom: 5px;
+        }
+        .info-item span {
+            word-break: break-all;
+        }
+        .peers-section {
+            padding: 20px;
+            border-radius: 5px;
+        }
+        .peers-section h2 {
+            margin-top: 0;
+        }
+        .peers-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .peer-card {
+            padding: 15px;
+            border-radius: 8px;
+            cursor: pointer;
+            border: 1px solid #000;
+        }
+        .peer-name {
+            font-size: 1.2em;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        .peer-public-key {
+            font-size: 0.85em;
+            word-break: break-all;
+            margin-bottom: 10px;
+            font-family: monospace;
+        }
+        .peer-status {
+            display: inline-block;
+            padding: 4px 10px;
+            border-radius: 12px;
+            font-size: 0.85em;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        .peer-throughput {
+            margin-top: 10px;
+            padding-top: 10px;
+        }
+        .peer-throughput-item {
+            display: flex;
+            justify-content: space-between;
+            margin: 5px 0;
+            font-size: 0.9em;
+            border: 1px solid #000;
+            padding: 4px 8px;
+        }
+        .loading {
+            text-align: center;
+            padding: 40px;
+        }
+        .error {
+            padding: 15px;
+            border-radius: 5px;
+            margin: 20px 0;
+        }
+    </style>
 </head>
-
 <body>
     <div class="navbar">
         <h1>WireGuard VPN Manager</h1>
         <div class="nav-buttons">
-            <a href="/" class="nav-btn active">Home</a>
-            <a href="/dashboard" class="nav-btn">Monitor</a>
+            <a href="/" class="nav-btn">Home</a>
+            <a href="/dashboard" class="nav-btn active">Monitor</a>
         </div>
     </div>
-    <h2>WireGuard Transfer Dashboard</h2>
-    <div id="chart" style="width: 100%; height: 500px;"></div>
+
+    <div class="interface-overview">
+        <h2>Interface Overview</h2>
+        <div id="interface-info" class="loading">Loading interface information...</div>
+    </div>
+
+    <div class="peers-section">
+        <h2>Peers</h2>
+        <div id="peers-container" class="loading">Loading peers...</div>
+    </div>
 
     <script src="js/dashboard_page.js"></script>
 </body>
 </html>
+
