- Refactor app structure to show interfaces list, edit and add new   interfaces, dashboard for each interface

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -121,7 +121,6 @@
         <h1>WireGuard VPN Manager</h1>
         <div class="nav-buttons">
             <a href="/" class="nav-btn">Home</a>
-            <a href="/dashboard" class="nav-btn active">Monitor</a>
         </div>
     </div>
 
@@ -135,7 +134,7 @@
         <div id="peers-container" class="loading">Loading peers...</div>
     </div>
 
-    <script src="js/dashboard_page.js"></script>
+    <script src="/js/dashboard_page.js"></script>
 </body>
 </html>
 
