add graphs bandwidth/time and dropped/time for interfaces

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -130,15 +130,17 @@
         <div id="interface-info" class="loading">Loading interface information...</div>
     </div>
 
+    <div id="bytesChart" style="height:350px;"></div>
+    <div id="speedChart" style="height:350px;"></div>
+    <div id="dropChart" style="height:350px;"></div>
+    <div id="dropRateChart" style="height:350px;"></div>
+
     <div class="peers-section">
         <h2>Peers</h2>
         <div id="peers-container" class="loading">Loading peers...</div>
     </div>
 
     <h2 id="title"></h2>
-
-    <div id="bytesChart" style="height:350px;"></div>
-    <div id="dropChart" style="height:350px;"></div>
 
     <script src="/js/dashboard_page.js"></script>
 </body>
