add monitor peers accessing services: duration and throughput

--- a/frontend/interface_config.html
+++ b/frontend/interface_config.html
@@ -164,8 +164,8 @@
         </div>
     </div>
     <div class="interface-context">
-        <strong>Đang cấu hình:</strong>
-        <span id="interface-context-name">Chưa chọn</span>
+        <strong>Currently configuring:</strong>
+        <span id="interface-context-name">Not chosen</span>
     </div>
     <div id="key-status-banner" class="key-status-banner"></div>
     
