--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -190,6 +190,18 @@
             background-color: rgba(134, 22, 24, 0.9);
         }
 
+        .interface-buttons {
+            display: flex;
+            gap: 10px;
+            margin-top: 10px;
+            flex-wrap: wrap;
+        }
+
+        .interface-buttons button {
+            flex: 1;
+            min-width: 0;
+        }
+
         #interfaces-empty {
             margin-top: 30px;
             text-align: center;
